@@ -224,6 +224,7 @@ constexpr auto TEXTURE_PAGE = (TEXTURE_HEIGHT * TEXTURE_WIDTH);
 #define NUM_CAUSTICS_TEXTURES	16
 #define PRINTSTRING_CENTER 1
 #define PRINTSTRING_BLINK 2
+#define PRINTSTRING_RIGHT 4
 #define PRINTSTRING_OUTLINE	8
 #define PRINTSTRING_COLOR_ORANGE D3DCOLOR_ARGB(255, 216, 117, 49)
 #define PRINTSTRING_COLOR_WHITE D3DCOLOR_ARGB(255, 255, 255, 255)
