@@ -41,15 +41,17 @@ DisplayString::DisplayString()
 For use in @{Strings.ShowString|ShowString} and @{Strings.HideString|HideString}.
 @function DisplayString
 @tparam string str string to print or key of translated string
-@tparam int x x-coordinate of top-left of string (or the center if DisplayStringOption.CENTER is given)
-@tparam int y y-coordinate of top-left of string (or the center if DisplayStringOption.CENTER is given)
+@tparam int x x-coordinate of string
+@tparam int y y-coordinate of string
 @tparam Color color the color of the text
 @tparam bool translated if false or omitted, the str argument will be printed.
 If true, the str argument will be the key of a translated string specified in
 strings.lua. __Default: false__.
 @tparam table flags a table of display options. Can be empty or omitted. The possible values and their effects are...
-	TEN.Strings.DisplayStringOption.CENTER -- see x and y parameters
+	TEN.Strings.DisplayStringOption.CENTER -- set horizontal origin point to center of the string
+	TEN.Strings.DisplayStringOption.RIGHT -- set horizontal origin point to right side of the string
 	TEN.Strings.DisplayStringOption.SHADOW -- will give the text a small shadow
+	TEN.Strings.DisplayStringOption.BLINK  -- will give the text the blinking effect
 __Default: empty__
 @treturn DisplayString A new DisplayString object.
 */
