@@ -119,8 +119,14 @@ void StringsHandler::ProcessDisplayStrings(float deltaTime)
 				if (str.m_flags[static_cast<size_t>(DisplayStringOptions::CENTER)])
 					flags |= PRINTSTRING_CENTER;
 
+				if (str.m_flags[static_cast<size_t>(DisplayStringOptions::RIGHT)])
+					flags |= PRINTSTRING_RIGHT;
+
 				if (str.m_flags[static_cast<size_t>(DisplayStringOptions::OUTLINE)])
 					flags |= PRINTSTRING_OUTLINE;
+
+				if (str.m_flags[static_cast<size_t>(DisplayStringOptions::BLINK)])
+					flags |= PRINTSTRING_BLINK;
 
 				m_callbackDrawSring(cstr, str.m_color, str.m_x, str.m_y, flags);
 
