@@ -32,6 +32,7 @@ Lua API changes:
 * Add Lara::GetControlLock() and Lara::SetControlLock() functions to handle controls locking.
 * Add Logic.HandleEvent() function to call node events.
 * Add functions to load, save, and delete savegames.
+* Add DisplayStringOption.RIGHT and DisplayStringOption.BLINK flags for DisplayString.
 * Make Vec2 object float-based instead of integer-based.
 * Add Vec2 arithmetic for division with a number and multiplication with another Vec2.
 * Add log messages warnings to functions AddCallback and RemoveCallback.
